--- a/books/templates/books/publisher_list.html
+++ b/books/templates/books/publisher_list.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h2>Publishers</h2>
   <ul>
-    {% for publisher in object_list %}
+    {% for publisher in my_favorite_publishers %}
       <li>{{ publisher.name }}</li>
     {% endfor %}
   </ul>
